.infra/traefik/traefik-auth.middleware.basicauth.yaml
# Declaring the user list
apiVersion:  traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-auth-secret
