.infra/traefik/traefik-dashboard.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match:  Host(`traefik.cloudlockops.io`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
      - name: traefik-auth
  
  tls:
    secretName: traefik.cloudlockops.io
